tests/errors/tc_expr_array_elemmismatch.lx
@module "main"

pub const main -> fn () int {
    let arr: [int; 5] = [1, 2, "hello", 4, 5];
    return 0;
}
